src/main/java/com/javatest/test/service/errors/LogWriterService.java
package com.javatest.test.service.errors;

public interface LogWriterService {
   public void writeException(Exception ex);

}